# Hoard-Alllocator

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt~  README.md
ext/gtest/: CMakeLists.txt
src/: AllocFreeHashmap.h  BaseHeap.h  CMakeLists.txt  FreeSuperblockManager.cpp  FreeSuperblockManager.h  GlobalHeap.h  HoardConstants.h  Internals.cpp  Internals.h  Local_heap.cpp  Local_heap.h  MallocIntercept.cpp  base_heap.cpp  base_heap.h  dummy_allocator.h  free_superblock_manager.cpp  free_superblock_manager.h  global_heap.cpp  global_heap.h  hoard_constants.h  internals.cpp  internals.cpp.BACKUP.11216.cpp  internals.cpp.BASE.11216.cpp  internals.cpp.REMOTE.11216.cpp  internals.cpp.autosave  internals.h  local_heap.cpp  local_heap.h  malloc_intercept.cpp  mmap_allocator.cpp  mmap_std_allocator.h  no_alloc_hashmap.h  superblock.cpp  superblock.h  tracing.cpp  tracing.h  utils.h
src/dummy/: dummy_malloc_intercept.cpp
src/gtest/cmake/: internal_utils.cmake
src/hoard_allocator/: AllocFreeHashMap.h  BaseHeap.cpp  BaseHeap.h  BaseStack.h  BaseSuperblock.h  BaseSuperblockHeader.h  Block.h  BlockStack.h  CMakeLists.txt  FreeSuperblockManager.h  GlobalHeap.cpp  GlobalHeap.h  HoardState.h  Internals.cpp  Internals.h  LocalHeap.cpp  LocalHeap.h  MallocIntercept.cpp  Superblock.h  SuperblockHeader.h  SuperblockStack.h  mmap_std_allocator.h  superblock.cpp  superblock.h
src/hoard_allocator/dummy/: CMakeLists.txt  die_malloc_intercept.cpp  dummy_malloc_intercept.cpp
src/hoard_allocator/hoard_common/: AllocFreeHashMap.h  CMakeLists.txt  hoard_constants.cpp  hoard_constants.h  noalloc_testing.h  tracing.cpp  tracing.h  utils.cpp  utils.h
src/test/: CMakeLists.txt  big_alloc_test.cpp  custom_hashmap_test.cpp  dummy_test.cpp  free_superblock_manager_test.cpp  global_heap_test.cpp  hashmap_noalloc_test.cpp  internals_test.cpp  ld_preload_test.cpp  local_heap_test.cpp  mmap_std_allocator_executable_test.cpp  mmap_std_allocator_test.cpp  noalloc_testing_test.cpp  shared_malloc.cpp  shared_malloc_test.cpp  single_malloc_test.cpp  superblock_test.cpp  utils_test.cpp
src/test/include/: allocation_tester.h  ldpreload_testing.h  noalloc_testing.h  rand.h  superblock_load_test.h
test/: custom_hashmap_test.cpp  dummy_test.cpp  mmap_allocator_test.cpp  mmap_std_allocator_executable_test.cpp  mmap_std_allocator_test.cpp  mmap_std_allocator_test.cpp.autosave
